--- a/htmltables/index.html
+++ b/htmltables/index.html
@@ -1,88 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=n, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>document</title>
+  <style>
+    h1 {
+      text-align: center;
+    }
+    table {
+        margin: auto;
+      width: 80%;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #444;
+      padding: 8px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <h1>Biodata</h1>
 
-  <div>
-    <strong>Full Name:</strong> Gokul <br>
-    <strong>Date of Birth:</strong> 10 October 2000 <br>
-    <strong>Gender:</strong> Male <br>
-    <strong>Address:</strong> No.6 West saidapet , Chennai, Tamilnadu <br>
-    <strong>Phone Number:</strong> +91 8825469382 <br>
-    <strong>Email:</strong> gokulgs8825@gmail.com <br>
-    <strong>Education:</strong> Bachelor of Electronics and communication <br>
-    <strong>Skills:</strong> HTML, CSS, JavaScript, React <br>
-    <strong>Languages Known:</strong> Tamil, English <br>
-    <strong>Hobbies:</strong> Reading, Coding, Travelling <br>
-  </div>
+  <h1>Cricket Match Schedule</h1>
 
-  <h1>Education Qualification</h1>
-
-  <div>
-    <table style="border: 2px solid #333; border-collapse: collapse;">
-        <tr>
-            <th></th>
-            <th>SSLC</th>
-            <th>HSC</th>
-            <th>UG Degree</th>
-        </tr>
-        <tr>
-            
-            <th>Name</th>
-            <td>STJMHHS</td>
-            <td>STJMHHS</td>
-            <td>APEC </td>
-        </tr>
-        <tr>
-            <th>Percentage</th>
-            <td>85</td>
-            <td>75</td>
-            <td>80</td>
-        </tr>
-        <tr>
-            <th>Year of Passing</th>
-            <td>2016</td>
-            <td>2018</td>
-            <td>2022</td>
-        </tr>
-        
-    </table>
-    </div>
-
-    <h1>Contact form</h1>
-    <form action="">
-        <label for="">First name</label>
-        <input type="text">
-        <br>
-        <label for="">Last name</label>
-        <input type="text">
-        <br>
-        <label for="">Phone number</label>
-        <input type="number">
-        <br>
-        <label for="">Mailid</label>
-        <input type="email">
-        <br>
-        <label for="">Address</label>
-        <input type="text">
-        <br>
-        <label for="country">Country:</label>
-        <label><input type="radio" name="number" > One</label><br>
-  <label><input type="radio" name="number"> Two</label><br>
-  <label><input type="radio" name="number"> Three</label><br>
-  <label><input type="radio" name="number"> Four</label><br><br>
-  <label>interst in
-    <br><input type="checkbox" name="interest"> Coding</label>
-<label><input type="checkbox" name="interest" > Music</label><br>
-<label><input type="checkbox" name="interest" > drawing</label><br>
-<label><input type="checkbox" name="interest"> singing</label><br>
-        <button type="submit">submit</button>
-    </form>
+  <table>
+    <tr>
+      <th>Date</th>
+      <th>Match</th>
+      <th>Venue</th>
+      <th>Time</th>
+    </tr>
+    <tr>
+      <td>10 Aug 2025</td>
+      <td>India vs Australia</td>
+      <td>Mumbai</td>
+      <td>3:00 PM</td>
+    </tr>
+    <tr>
+      <td>12 Aug 2025</td>
+      <td>England vs South Africa</td>
+      <td>Delhi</td>
+      <td>7:00 PM</td>
+    </tr>
+    <tr>
+      <td>14 Aug 2025</td>
+      <td>Pakistan vs New Zealand</td>
+      <td>Kolkata</td>
+      <td>3:00 PM</td>
+    </tr>
+    <tr>
+      <td>16 Aug 2025</td>
+      <td>India vs England</td>
+      <td>Chennai</td>
+      <td>7:00 PM</td>
+    </tr>
+  </table>
 
 </body>
 </html>
